--- a/arch/arm64/configs/judyln_lao_com-perf_defconfig
+++ b/arch/arm64/configs/judyln_lao_com-perf_defconfig
@@ -365,7 +365,7 @@ CONFIG_SPI_QCOM_GENI=y
 CONFIG_SPI_SPIDEV=y
 CONFIG_SLIMBUS_MSM_NGD=y
 CONFIG_SPMI=y
-CONFIG_SPMI_MSM_PMIC_ARB_DEBUG=y
+# CONFIG_SPMI_MSM_PMIC_ARB_DEBUG is not set
 CONFIG_PINCTRL_SDM845=y
 CONFIG_PINCTRL_QCOM_SPMI_PMIC=y
 CONFIG_GPIOLIB=y
@@ -427,14 +427,14 @@ CONFIG_STMVL53L0=y
 CONFIG_MSM_VIDC_V4L2=y
 CONFIG_MSM_VIDC_GOVERNORS=y
 CONFIG_MSM_SDE_ROTATOR=y
-CONFIG_MSM_SDE_ROTATOR_EVTLOG_DEBUG=y
+# CONFIG_MSM_SDE_ROTATOR_EVTLOG_DEBUG is not set
 CONFIG_DVB_MPQ=y
 CONFIG_DVB_MPQ_DEMUX=y
 CONFIG_DVB_MPQ_TSPP1=y
 CONFIG_TSPP=y
 CONFIG_QCOM_KGSL=y
 CONFIG_DRM=y
-CONFIG_DRM_SDE_EVTLOG_DEBUG=y
+# CONFIG_DRM_SDE_EVTLOG_DEBUG is not set
 CONFIG_DRM_SDE_RSC=y
 # CONFIG_FB_VIRTUAL is not set
 CONFIG_BACKLIGHT_LCD_SUPPORT=y
@@ -574,7 +574,7 @@ CONFIG_MSM_QMP=y
 CONFIG_IOMMU_IO_PGTABLE_FAST=y
 CONFIG_ARM_SMMU=y
 CONFIG_QCOM_LAZY_MAPPING=y
-CONFIG_IOMMU_DEBUG=y
+# CONFIG_IOMMU_DEBUG is not set
 # CONFIG_IOMMU_DEBUG_TRACKING is not set
 CONFIG_IOMMU_TESTS=y
 CONFIG_QCOM_RUN_QUEUE_STATS=y
@@ -625,7 +625,7 @@ CONFIG_MSM_PM=y
 CONFIG_QCOM_DCC_V2=y
 CONFIG_QTI_RPM_STATS_LOG=y
 CONFIG_QCOM_FORCE_WDOG_BITE_ON_PANIC=y
-CONFIG_QMP_DEBUGFS_CLIENT=y
+# CONFIG_QMP_DEBUGFS_CLIENT is not set
 # CONFIG_MEM_SHARE_QMI_SERVICE is not set
 CONFIG_QSEE_IPC_IRQ_BRIDGE=y
 CONFIG_QCOM_BIMC_BWMON=y
@@ -673,7 +673,7 @@ CONFIG_NLS_UTF8=y
 CONFIG_PRINTK_TIME=y
 CONFIG_PRINTK_TIMESPEC=y
 CONFIG_PRINTK_PROCESS=y
-CONFIG_DEBUG_INFO=y
+# CONFIG_DEBUG_INFO is not set
 CONFIG_MAGIC_SYSRQ=y
 CONFIG_WQ_WATCHDOG=y
 CONFIG_PANIC_ON_OOPS=y
@@ -684,7 +684,7 @@ CONFIG_PANIC_TIMEOUT=5
 CONFIG_QCOM_RTB=y
 CONFIG_QCOM_RTB_SEPARATE_CPUS=y
 CONFIG_CPU_FREQ_SWITCH_PROFILER=y
-CONFIG_DEBUG_ALIGN_RODATA=y
+# CONFIG_DEBUG_ALIGN_RODATA is not set
 # CONFIG_DEBUG_RODATA is not set
 # CONFIG_CORESIGHT is not set
 # CONFIG_CORESIGHT_LINK_AND_SINK_TMC is not set
@@ -739,7 +739,7 @@ CONFIG_MPC_UT_FRAMEWORK=y
 CONFIG_WLAN_OFFLOAD_PACKETS=y
 CONFIG_WLAN_FEATURE_MEMDUMP=y
 CONFIG_FEATURE_TSO=y
-CONFIG_FEATURE_TSO_DEBUG=y
+# CONFIG_FEATURE_TSO_DEBUG is not set
 CONFIG_WLAN_FASTPATH=y
 CONFIG_WLAN_NAPI=y
 CONFIG_WLAN_SYNC_TSF=y
